{
  "version": 4,
  "terraform_version": "1.9.4",
  "serial": 24,
  "lineage": "269985d8-3034-69f6-5356-46f82c75398f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-050606725b3e01a1d",
            "arn": "arn:aws:ec2:us-east-1:014280788348:elastic-ip/eipalloc-050606725b3e01a1d",
            "association_id": "eipassoc-0dc7f842abe8c674b",
            "domain": "vpc",
            "id": "eipalloc-050606725b3e01a1d",
            "instance": "i-0f163326b02e6cfe8",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0dc74ec97ddb0bbd6",
            "private_dns": "ip-172-31-95-23.ec2.internal",
            "private_ip": "172.31.95.23",
            "public_dns": "ec2-54-91-52-124.compute-1.amazonaws.com",
            "public_ip": "54.91.52.124",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.vm",
            "aws_key_pair.ssh",
            "aws_security_group.allow-all-outbound",
            "aws_security_group.allow-http-inbound",
            "aws_security_group.allow-ssh-inbound"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a5f04cdf7758e9f0",
            "arn": "arn:aws:ec2:us-east-1:014280788348:instance/i-0f163326b02e6cfe8",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f163326b02e6cfe8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "terraform-20240830202036382900000001",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0dc74ec97ddb0bbd6",
            "private_dns": "ip-172-31-95-23.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.95.23",
            "public_dns": "ec2-44-202-111-126.compute-1.amazonaws.com",
            "public_ip": "44.202.111.126",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07001dfac3b07a96e",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "terraform-20240830202036384600000002",
              "terraform-20240830202036384700000003",
              "terraform-20240830202036384800000004"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04742453184665109",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04e3edf4da2eef590",
              "sg-096d3359c1652e0c0",
              "sg-09ab5b41b041ce7e7"
            ]
          },
          "dependencies": [
            "aws_key_pair.ssh",
            "aws_security_group.allow-all-outbound",
            "aws_security_group.allow-http-inbound",
            "aws_security_group.allow-ssh-inbound"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-all-outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:014280788348:security-group/sg-04e3edf4da2eef590",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04e3edf4da2eef590",
            "ingress": [],
            "name": "terraform-20240830202036384600000002",
            "name_prefix": "terraform-",
            "owner_id": "014280788348",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0890c7b95b12b1d47"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-http-inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:014280788348:security-group/sg-09ab5b41b041ce7e7",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-09ab5b41b041ce7e7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240830202036384800000004",
            "name_prefix": "terraform-",
            "owner_id": "014280788348",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0890c7b95b12b1d47"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-ssh-inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:014280788348:security-group/sg-096d3359c1652e0c0",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-096d3359c1652e0c0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20240830202036384700000003",
            "name_prefix": "terraform-",
            "owner_id": "014280788348",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0890c7b95b12b1d47"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}